syntax = "proto3";
// TOOD: make file
// TODO: grpc gateway
//TODO: https://github.com/grpc-ecosystem/grpc-gateway/blob/master/examples/internal/proto/examplepb/a_bit_of_everything.proto
//import "google/api/annotations.proto";

package server;
option go_package = "github.com/gallak87/goskel/proto/userpb";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  // todo: rpc Login(LoginUserRequest) returns (LoginUserResponse) {}
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
}

message RegisterUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}